report system section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
     </section>
     <hr />
     
+    <!-- Report System -->
+    <section id="social">
+      <h1 class="text-center">Report System</h1>
+      <div class="d-grid gap-2 d-md-flex justify-content-center">
+        <div class="row align-items-center" id="social-row">
+          <div class="col-md-4 social-col">
+            <a href=""
+              ><img
+                class="img-responsive rounded mx-auto d-block"
+                src="images/image64.png"
+                alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr/>
+
+
     <!-- aims -->
 
     <section id="aims">
