--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <!--Bootstrap 4 -->
     
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
       rel="stylesheet"
@@ -107,7 +107,7 @@
           <div class="col-md-6" id="banner-col2">
             <img
               class="img-responsive rounded mx-auto d-block"
-              src="images/intro.png"
+              src="assets/images/intro.png"
               alt=""
             />
           </div>
@@ -125,7 +125,7 @@
             <a href=""
               ><img
                 class="img-responsive rounded mx-auto d-block"
-                src="images/image64.png"
+                src="assets/images/image64.png"
                 alt=""
             /></a>
           </div>
@@ -144,7 +144,7 @@
           <div class="col-md-6" id="aims-col">
             <img
               class="img-responsive rounded mx-auto d-block"
-              src="images/example.png"
+              src="assets/images/example.png"
               alt=""
             />
           </div>
@@ -230,7 +230,7 @@
         <div class="row" id="banner-row">
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -264,7 +264,7 @@
 
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -281,7 +281,7 @@
 
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -298,7 +298,7 @@
 
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -315,7 +315,7 @@
 
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -332,7 +332,7 @@
 
           <div class="col-md-4" id="team-col1">
             <img
-              src="images/example.png"
+              src="assets/images/example.png"
               class="img-fluid rounded mx-auto d-block"
               alt="..."
             />
@@ -362,7 +362,7 @@
             <a href=""
               ><img
                 class="img-responsive rounded mx-auto d-block"
-                src="images/image64.png"
+                src="assets/images/image64.png"
                 alt=""
             /></a>
           </div>
@@ -370,7 +370,7 @@
             <a href=""
               ><img
                 class="img-responsive rounded mx-auto d-block"
-                src="images/image64.png"
+                src="assets/images/image64.png"
                 alt=""
             /></a>
           </div>
@@ -378,7 +378,7 @@
             <a href=""
               ><img
                 class="img-responsive rounded mx-auto d-block"
-                src="images/image64.png"
+                src="assets/images/image64.png"
                 alt=""
             /></a>
           </div>
